drop_columns 지정

--- a/배포방법.md
+++ b/배포방법.md
@@ -53,3 +53,9 @@ python -m twine upload dist/*
   username = __token__
   password = pypi-AgEI... 생략
 ```
+
+# 업그레이드
+
+```
+pip install --upgrade inpinitiFinance
+```
